--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,7 @@ body {
 #result_pane {
     font-size:12px;
     line-height:14px;
-    max-height:80%;
+    max-height:300px;
     overflow-y:scroll;
 }
 
