--- a/css/index.css
+++ b/css/index.css
@@ -55,10 +55,13 @@ body {
     line-height:14px;
     max-height:300px;
     overflow-y:scroll;
+	border:1px solid #CCC;
+	padding:2px;
+	width:100%;
 }
 
 #result_table {
-    width:99%;
+    width:100%;
 	max-height:80%;
     overflow-y:scroll;
 }
