--- a/css/index.css
+++ b/css/index.css
@@ -53,17 +53,18 @@ body {
 #result_pane {
     font-size:12px;
     line-height:14px;
-    max-height:300px;
     overflow-y:scroll;
 	border:1px solid #CCC;
-	padding:2px;
 	width:99%;
+	max-width:99%;
+	max-height:300px;
 }
 
 #result_table {
-    width:98%;
-	max-height:60%;
+    width:97%;
     overflow-y:scroll;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 #result_table, #result_table td {
